--- a/app/templates/events.html
+++ b/app/templates/events.html
@@ -78,13 +78,65 @@
                         </div>
                     </div>
                 </a>
+                {% if session["user"] and event.event_created_by == user._id %}
+                    <a href="#" aria-label="Cancel Event" id="try-cancel-event">
+                        Cancel Event
+                    </a>
+                    <!-- Cancel Event Modal -->
+                    <div class="card-panel modals" id="cancel-event-modal">
+                        <p class="warning text-shadow yellow-bg hoverable">
+                            This action is irreversible, if you continue the event will be deleted
+                        </p>
+                        <form action="{{ url_for('events.cancel_event', username=session['user']) }}" method="POST">
+                            <!-- Hidden input to get the event id -->
+                            <div class="hide">
+                                <input id="cancel_event" name="leave_event" value="{{ event._id }}" type="text">
+                            </div>
+                            <button class="cancel-btn red-bg white-txt" type="submit">
+                                Cancel Event
+                            </button>
+                            <div class="center-align">
+                                <a href="{{ url_for('events.browse_events') }}" aria-label="Link to the Home page." 
+                                    class="btn back-btn blue-txt yellow-bg">Back to browsing</a>
+                            </div>
+                        </form>
+                    </div>
+                {% elif session["user"] and (event.event_joined_by in user.events_joined) %}
+                    <form action="#leave_event" method="POST">
+                        <!-- Hidden input to get the event id -->
+                        <div class="hide">
+                            <input id="leave_event" name="leave_event" value="{{ event._id }}" type="text">
+                        </div>
+                        <button class="cancel-btn red-bg white-txt" type="submit">
+                            Leave
+                        </button>
+                    </form>
+                {% elif session["user"] and (event.event_joined_by not in user.events_joined) %}
+                    <form action="#join_event" method="POST">
+                        <!-- Hidden input to get the event id -->
+                        <div class="hide">
+                            <input id="join_event" name="join_event" value="{{ event._id }}" type="text">
+                        </div>
+                        <button class="submit-btn blue-bg white-txt" type="submit">
+                            Leave
+                        </button>
+                    </form>
+                {% else %}
+                    <a href="#" class="black-txt centered" id="try-join">
+                        <h2 class="home-card-headings center-align text-shadow">Create</h2>
+                        <p class="home-card-txt center-align">
+                            Join not connected
+                        </p>
+                    </a>
+                {% endif %}
             {% endfor %}
         </div>
     </div>
 </div>
-
+<!-- Overlay -->
+<div class="overlay"></div>
 {% endblock %}
 
 {% block scripts %}
-    <script src="{{ url_for('static', filename='js/scripts/browse_events.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/scripts/events.js') }}"></script>
 {% endblock %}
