--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -86,7 +86,7 @@
         <div class="center-align">
             <a href="{{ url_for('users.login') }}" aria-label="Link to the Log In page." class="btn submit-btn blue-bg">Log In</a>
             <a href="{{ url_for('users.signup') }}" aria-label="Link to the Sign Up page." class="btn submit-btn blue-bg">Sign Up</a> <br>
-            <a href="{{ url_for('index.home') }}" aria-label="Link to the Home page." class="btn back-home-btn blue-txt yellow-bg">Back to browsing</a>
+            <a href="{{ url_for('index.home') }}" aria-label="Link to the Home page." class="btn back-btn blue-txt yellow-bg">Back to browsing</a>
         </div>
     </div>
 
