--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -515,9 +515,28 @@ footer {
     background-color: #FF091E;
 }
 
-.event-modal-heading {
+/* events card */
+
+.events-card-sections {
+    margin-bottom: 0;
+}
+
+.events-card-titles {
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    font-style: italic;
+    margin-top: 0;
+    margin-bottom: 3px;
+}
+
+.events-card-descriptions {
+    font-size: 0.8rem;
+    margin-top: 0;
+}
+
+/* .event-modal-heading {
     margin-top: 0;
     font-size: 2rem;
     font-style: italic;
     font-weight: 700;
-}
+} */
