--- a/app/templates/create_event.html
+++ b/app/templates/create_event.html
@@ -77,7 +77,7 @@
               </div>
             <!-- Join -->
             <div class="row">
-                <div class="col12 center-align">
+                <div class="col s12 center-align">
                     <button class="btn waves-effect waves-light blue-bg white-txt submit-btn" type="submit">Create</button>
                     <a href="{{ url_for('index.home') }}" 
                         class="btn waves-effect waves-light red-bg white-txt cancel-btn">Cancel</a>
