--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -11,7 +11,7 @@
         <div class="col s12 l4">
             <div class="card-panel yellow-bg home-cards valign-wrapper hoverable">
                 <a href="{{ url_for('events.browse_events') }}" class="black-txt centered">
-                    <h2 class="home-card-headings center-align text-shadow">Events</h2>
+                    <h2 class="card-headings center-align text-shadow">Events</h2>
                     <p class="home-card-txt center-align">
                         Brows Events and Join to Participate
                     </p>
@@ -23,7 +23,7 @@
             <div class="card-panel orange-bg home-cards valign-wrapper hoverable">
                 {% if session.user %}
                     <a href="{{ url_for('events.create_event', username=session['user']) }}" class="black-txt centered">
-                        <h2 class="home-card-headings center-align text-shadow">Create</h2>
+                        <h2 class="card-headings center-align text-shadow">Create</h2>
                         <p class="home-card-txt center-align">
                             Make an Event of your own in a few steps<br>
                             It's easy and fun!
@@ -31,7 +31,7 @@
                     </a>
                 {% else %}
                     <a href="#" class="black-txt centered" id="try-create">
-                        <h2 class="home-card-headings center-align text-shadow">Create</h2>
+                        <h2 class="card-headings center-align text-shadow">Create</h2>
                         <p class="home-card-txt center-align">
                             Make an Event of your own in a few steps<br>
                             It's easy and fun!
@@ -44,7 +44,7 @@
         <div class="col s12 l4">
             <div class="card-panel green-bg home-cards valign-wrapper hoverable">
                 <a href="#" class="black-txt centered">
-                    <h2 class="home-card-headings center-align text-shadow">Support</h2>
+                    <h2 class="card-headings center-align text-shadow">Support</h2>
                     <p class="home-card-txt center-align">
                         Get ideas<br>
                         Share parenting tips<br>
@@ -65,7 +65,7 @@
 
     <!-- about us modal -->
     <div id="about-modal" class="modals white-bg black-txt card-panel">
-        <h2 class="home-card-headings center-align text-shadow">About Us!</h2>
+        <h2 class="card-headings center-align text-shadow">About Us!</h2>
         <p class="center-align">
             Family Friendly is a community based platform where Families can get together and enjoy activities.<br>
             It promotes Togetherness, mobility, physical and mental health.<br>
@@ -78,7 +78,7 @@
 
     <!-- try create modal -->
     <div id="try-create-modal" class="modals white-bg black-txt card-panel">
-        <h2 class="home-card-headings center-align text-shadow">Sorry Cannot Create!</h2>
+        <h2 class="card-headings center-align text-shadow">Sorry Cannot Create!</h2>
         <p class="center-align">
             In order to Create an Event, 
             please <span class="text-shadow">Log In</span> or <span class="text-shadow">Sign Up</span>.
