--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -363,6 +363,14 @@ footer {
         inset 0 0 0 4px #fafafa;
 }
 
+/* cards */
+.card-headings {
+    margin-top: 0;
+    font-size: 2rem;
+    font-style: italic;
+    font-weight: 700;
+}
+
 /* profile chip */
 .profile-chip {
     margin: auto;
@@ -383,13 +391,6 @@ footer {
     width: 360px;
     height: 200px;
     border-radius: 10px;
-}
-
-.home-card-headings {
-    margin-top: 0;
-    font-size: 2rem;
-    font-style: italic;
-    font-weight: 700;
 }
 
 .home-card-txt {
